@@ -1,3 +1,9 @@
+2007-04-21  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me.c: (about_me_setup_dialog): don't print a warning to
+	the console if the "self" contact does not yet exist (closes bug
+	#419332). Also fix a small memory leak
+
 2007-04-08  Jens Granseuer  <jensgr@gmx.net>
 
 	Patch by: Kristof Vansant <de_lupus@pandora.be>
